encrypt and decrypt class object